--- a/Latex Template of Report/main.tex
+++ b/Latex Template of Report/main.tex
@@ -52,7 +52,7 @@
 \vskip 6pt
 \hrule
 \vskip 8pt
-\includegraphics[width=0.13\linewidth]{logo.png}
+\includegraphics[width=0.13\linewidth]{logo}
 \vskip 8pt
 \textbf{Master’s degree course in Computer Engineering for the Internet of Things}
 \vskip 32pt
