--- a/Latex Template of Report/capitoli/capitolo1.tex
+++ b/Latex Template of Report/capitoli/capitolo1.tex
@@ -1,9 +1,8 @@
 \chapter{Business Understanding And Data Understanding}
+\section{Business Understanding}
 
 According to the dataset, predicting customer income can provide better benefits to the company. By clustering customers, it is possible to analyze their behavior and gain insights into their preferences and needs. This can help companies tailor their products and services to meet the specific needs of their customers. Such an approach can lead to increased customer satisfaction and loyalty, which can ultimately translate into higher profits for the company. 
-\section{Determine Data Mining Goals}
 
-Data mining is the process of discovering patterns in large data sets involving methods at the intersection of machine learning, statistics, and database systems. The goals of data mining are to extract knowledge from data and transform it into an understandable structure for further use. The primary data mining goals include classification, regression, clustering, and summarization. Classification is the function of classifying data items into several predefined classes. Regression is the function of mapping data items into a real-valued prediction variable. Clustering is a descriptive task to identify a finite set of clusters to describe the data. Summarization is a set of methods for finding a description for a subset of data in the database
 \subsection{Data mining Goals}
 %(Describe the intended outputs that enables the achievement of the project objectives) 
 The goal is to create a tool capable of estimating new properties that will be put on the market, understanding the importance of the parameters that contribute to the economic evaluation of the property, in order to have a more accurate estimate of the value of the property based on the parameters that allow its value to be surveyed. For each property there is no right or wrong answer to its market value and it is not even possible to make a comparison with other properties present, albeit close to rent, as each property has different characteristics from each other.
