--- a/Latex Template of Report/capitoli/capitolo5.tex
+++ b/Latex Template of Report/capitoli/capitolo5.tex
@@ -1,6 +1,6 @@
 \chapter{Knowledge}
 
-In this chapter, we will be listing some interesting phenomena that were obtained from the cluster modeling process.
+In this chapter, we will list some interesting phenomena that were obtained from the cluster modeling process.
 
 \section{Feature comparation}
 
